# stm32wl-lightswitch-demo

./: .gitignore  Cargo.toml  README.md  memory.x  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
