[workspace]
members = ["client", "server", "shared"]

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = true
lto = false
opt-level = 3
overflow-checks = true

[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = true
lto = false
opt-level = 3
overflow-checks = true

[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
lto = false
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = false
opt-level = 3 
overflow-checks = false

[patch.crates-io.p256-cortex-m4-sys]
git = "https://github.com/newAM/p256-cortex-m4-sys.git"
rev = "b49f79c8c4d21cb699efd98a66330ed2b7a4a207"
