[workspace]
members = ["client", "server", "shared"]

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = true
lto = false
opt-level = 3
overflow-checks = true

[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = true
lto = false
opt-level = 3
overflow-checks = true

[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
lto = false
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = false
opt-level = 3 
overflow-checks = false
