[package]
name = "client"
version = "0.1.0"
authors = ["Alex Martens <alexmgit@protonmail.com>"]
edition = "2021"
license = "MIT"

[dependencies]
bytemuck = "1"
cortex-m-rtic = "0.6.0-rc.4"
defmt = "0.3"
defmt-rtt = "0.3"
minicbor = "0.11"
panic-probe = { version = "0.3", features = ["print-defmt" ] }
shared = { path = "../shared" }

[dependencies.nucleo-wl55jc-bsp]
version = "0.2"
features = ["stm32wl5x_cm4", "rt", "defmt"]
