[package]
name = "server"
version = "0.1.0"
authors = ["Alex Martens <alexmgit@protonmail.com>"]
edition = "2021"
license = "MIT"

[dependencies]
bytemuck = "1"
cortex-m-rtic = "0.6.0-rc.4"
defmt = "0.3"
defmt-rtt = "0.3"
minicbor = "0.11"
panic-probe = { version = "0.3", features = ["print-defmt" ] }
shared = { path = "../shared" }
stm32wl = { version = "0.14", features = ["stm32wl5x_cm4", "rt"] }

[dependencies.nucleo-wl55jc-bsp]
git = "https://github.com/stm32-rs/stm32wlxx-hal.git"
rev = "0d6d597a0f28bb338cf8098b228ee43812a7efca"
features = ["stm32wl5x_cm4", "rt", "defmt"]
