[package]
name = "server"
version = "0.1.0"
authors = ["Alex Martens <alex@thinglab.org>"]
edition = "2021"
license = "MIT"

[dependencies]
bytemuck = "1"
cortex-m-rtic = "1.0.0"
defmt = "0.3"
defmt-rtt = "0.3"
panic-probe = { version = "0.3", features = ["print-defmt" ] }
postcard = "1.0"
shared.path = "../shared"

[dependencies.nucleo-wl55jc-bsp]
version = "0.5"
features = ["stm32wl5x_cm4", "rt", "defmt", "chrono"]
