[package]
name = "shared"
version = "0.1.0"
authors = ["Alex Martens <alexmgit@protonmail.com>"]
edition = "2021"
license = "MIT"

[dependencies]
static_assertions = "^1"

[dependencies.stm32wlxx-hal]
git = "https://github.com/stm32-rs/stm32wlxx-hal.git"
rev = "452f674e355fc025c63cd5dcd7f451cdefced69d"
features = ["stm32wl5x_cm4"]
